@@ -47,8 +47,9 @@
 
         <!-- Sonar properties -->
         <sonar.binaries>target/classes</sonar.binaries>
-        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco-ut.exec</sonar.jacoco.reportPath>
-        <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
+        <sonar.jacoco.codeCoveragePath>${maven.multiModuleProjectDirectory}/target</sonar.jacoco.codeCoveragePath>
+        <sonar.jacoco.reportPath>${sonar.jacoco.codeCoveragePath}/jacoco-ut.exec</sonar.jacoco.reportPath>
+        <sonar.jacoco.itReportPath>${sonar.jacoco.codeCoveragePath}/jacoco-it.exec</sonar.jacoco.itReportPath>
         <sonar.scm.disabled>true</sonar.scm.disabled>
         <sonar.exclusions>
             **/target/**,
@@ -62,6 +63,7 @@
         <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
         <sonar.host.url>http://edelquality.westeurope.cloudapp.azure.com:9000/sonar/</sonar.host.url>
         <sonar.ws.timeout>300</sonar.ws.timeout>
+        <jacoco.maven.plugin.version>0.7.7.201606060606</jacoco.maven.plugin.version>
         <!--   Enable the proxy when running sonar from within the EC network -->
         <!--<sonar.web.javaAdditionalOpts>-Dhttp.proxyHost=158.169.9.13 -Dhttp.proxyPort=8012 -Dhttp.proxyUser=theuser -Dhttp.proxyPassword=thepassword -Dhttps.proxyHost=158.169.9.13 -Dhttps.proxyPort=8012 -Dhttps.proxyUser=theuser -Dhttps.proxyPassword=thepassword -Dhttps.nonProxyHosts=localhost -Dhttp.nonProxyHosts=localhost</sonar.web.javaAdditionalOpts>-->
     </properties>
@@ -548,8 +550,7 @@
                         <execution>
                             <id>default-test</id>
                             <configuration>
-                                <argLine>-server -ea -Duser.language=en -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    ${surefire.argLine}
+                                <argLine>-server -ea -Duser.language=en -Xms512m -Xmx1024m ${surefire.argLine}
                                 </argLine>
                                 <excludes>
                                     <exclude>**/IT*.java</exclude>
@@ -572,9 +573,7 @@
                             </goals>
                             <configuration>
                                 <!-- Sets the VM argument line used when integration tests are run. -->
-                                <argLine>-server -ea -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    -Duser.language=en
-                                    ${failsafeArgLine}
+                                <argLine>-server -ea -Xms512m -Xmx1024m -Duser.language=en ${failsafeArgLine}
                                 </argLine>
                                 <!-- Skips integration tests if the value of skipITs property is true-->
                                 <skipTests>${skipITs}</skipTests>
@@ -592,9 +591,7 @@
                             </goals>
                             <configuration>
                                 <!-- Sets the VM argument line used when integration tests are run. -->
-                                <argLine>-server -ea -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    -Duser.language=en
-                                    ${failsafeArgLine}
+                                <argLine>-server -ea -Xms512m -Xmx1024m -Duser.language=en ${failsafeArgLine}
                                 </argLine>
                                 <!-- Skips integration tests if the value of skipITs property is true-->
                                 <skipTests>${skipITs}</skipTests>
@@ -663,7 +660,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.7.201606060606</version>
+                <version>${jacoco.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>pre-unit-test</id>
